# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import ordersRouter from "./orders";
+import exchangeRouter from "./exchange";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(ordersRouter);
+router.use(exchangeRouter);
 
 export default router;
